<resources>
    <string name="app_name">Gym Workout App</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="delete_user_data">DELETE USER DATA</string>
    <string name="logout">LOGOUT</string>
    <string name="auth_switch_login">"Don't have an account yet? SIGN UP"</string>
    <string name="auth_switch_signup">"Already have an account? LOG IN"</string>
</resources>