<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.AuthActivity">

    <FrameLayout
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/login_signup_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="@color/primary"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            android:text="@string/app_name"
            android:textColor="@color/secondary" />
    </FrameLayout>

    <TextView
        android:id="@+id/auth_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="172dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:hint="@string/email"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_title">

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/material_dynamic_neutral_variant80"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_email">

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/material_dynamic_neutral_variant80"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="Repeat password"
        android:textColorHint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/til_signup_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/material_dynamic_neutral_variant80"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <Button-->
<!--        android:id="@+id/signup_google"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/sign_up_with_google"-->
<!--        android:backgroundTint="@color/primary_darker"-->
<!--        android:textColor="@color/secondary"-->
<!--        android:textSize="14sp"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/til_signup_password" />-->

    <Button
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:backgroundTint="@color/primary_darker"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_password_reset" />

    <TextView
        android:id="@+id/auth_method_switch"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="172dp"
        android:text="Already have an account? LOG IN"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_button"
        app:layout_constraintVertical_bias="0.916" />

</androidx.constraintlayout.widget.ConstraintLayout>